WIP: Initial commit...

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GaWmasAdminUi</title>
+  <title>Georgia WMAs - Insights for the public land hunter</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="bg-gradient-to-b from-gawmas-green to-gray-900 from-2% to-5% text-gray-200 m-0">
+  <gawmas-root></gawmas-root>
 </body>
 </html>
